Update image source in index.html
Signed-off-by: Mario Vejlupek <mario@vejlupek.cz>

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     </p>
 
     <div class="flex justify-center mb-8">
-      <img src="preview.webp" alt="Mario Vejlupek" class="rounded-lg max-h-96">
+      <img src="mario.png" alt="Mario Vejlupek" class="rounded-lg max-h-96">
     </div>
 
     <p class="text-lg font-bold text-gray-800">Mario Vejlupek</p>
