Refactor index.html layout and enhance visual elements
Signed-off-by: Mario Vejlupek <mario@vejlupek.cz>

--- a/index.html
+++ b/index.html
@@ -25,26 +25,30 @@
 </head>
 
 <body class="bg-gray-50 font-sans">
-  <div class="max-w-5xl mx-auto py-12 px-6 text-center">
-    <h1 class="text-3xl md:text-5xl font-semibold text-gray-800 mb-4 italic">Power UP Your Infrastructure</h1>
-    <h2 class="text-xl md:text-2xl text-gray-700 mb-8">DevOps consulting for businesses ready to level up.</h2>
+  <div class="max-w-6xl mx-auto py-12 px-6">
+    <h1 class="text-3xl md:text-5xl font-semibold text-gray-800 mb-10 text-center italic">Power UP Your Infrastructure
+    </h1>
 
-    <p class="text-gray-600 text-lg mb-6">Bridging Development and Operations for <span class="font-bold">Over 20
-        Years</span><br>
-      <span class="text-gray-800 font-semibold">#DevOpsBeforeItWasCool</span>
-    </p>
-
-    <div class="flex justify-center mb-8">
-      <img src="mario.png" alt="Mario Vejlupek" class="rounded-lg max-h-96">
+    <div class="flex flex-col md:flex-row items-center justify-between gap-8 mb-12">
+      <div class="md:w-1/2 text-left">
+        <h2 class="text-2xl md:text-3xl text-gray-700 mb-6">DevOps consulting for businesses ready to level up.</h2>
+        <p class="text-gray-600 text-lg mb-2">Bridging Development and Operations for <span class="font-bold">Over 20
+            Years</span></p>
+        <p class="text-gray-800 font-semibold">#DevOpsBeforeItWasCool</p>
+      </div>
+      <div class="md:w-1/2 flex justify-end">
+        <img src="mario.png" alt="Mario Vejlupek" class="rounded-lg max-h-96">
+      </div>
     </div>
 
-    <p class="text-lg font-bold text-gray-800">Mario Vejlupek</p>
-    <p class="text-gray-600 mb-8">DevOps Engineer // DevOps Architect</p>
+    <p class="text-lg font-bold text-gray-800 text-center">Mario Vejlupek</p>
+    <p class="text-gray-600 mb-8 text-center">DevOps Engineer // DevOps Architect</p>
 
     <!-- Carousel with fade effect -->
     <div class="overflow-hidden relative fade-mask">
       <div class="inline-flex animate-[scroll_30s_linear_infinite] w-max">
         <div class="flex items-center space-x-12 pr-12">
+          <!-- Tool icons -->
           <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/kubernetes/kubernetes-plain.svg"
             alt="Kubernetes" class="h-10">
           <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/terraform/terraform-original.svg"
@@ -63,6 +67,12 @@
             alt="AWS" class="h-10">
           <img src="https://raw.githubusercontent.com/grafana/grafana/main/public/img/grafana_icon.svg" alt="Grafana"
             class="h-10">
+
+          <!-- Fancy DevOps visual -->
+          <img
+            src="https://cdn.dribbble.com/users/1355613/screenshots/15665028/media/1787f2a2ac2f9e50d3d3f048905499f3.gif"
+            alt="DevOps Loop" class="h-12 rounded shadow-md">
+
           <!-- Repeat icons for continuous scroll -->
           <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/kubernetes/kubernetes-plain.svg"
             alt="Kubernetes" class="h-10">
@@ -82,6 +92,11 @@
             alt="AWS" class="h-10">
           <img src="https://raw.githubusercontent.com/grafana/grafana/main/public/img/grafana_icon.svg" alt="Grafana"
             class="h-10">
+
+          <!-- Fancy DevOps visual duplicate -->
+          <img
+            src="https://cdn.dribbble.com/users/1355613/screenshots/15665028/media/1787f2a2ac2f9e50d3d3f048905499f3.gif"
+            alt="DevOps Loop" class="h-12 rounded shadow-md">
         </div>
       </div>
     </div>
