Enhance profile section in index.html with additional details and improved layout
Signed-off-by: Mario Vejlupek <mario@vejlupek.cz>

--- a/index.html
+++ b/index.html
@@ -36,13 +36,12 @@
             Years</span></p>
         <p class="text-gray-800 font-semibold">#DevOpsBeforeItWasCool</p>
       </div>
-      <div class="md:w-1/2 flex justify-end">
-        <img src="mario.png" alt="Mario Vejlupek" class="rounded-lg max-h-96">
+      <div class="md:w-1/2 flex flex-col items-end text-right">
+        <img src="mario.png" alt="Mario Vejlupek" class="rounded-lg max-h-96 mb-4">
+        <p class="text-lg font-bold text-gray-800">Mario Vejlupek</p>
+        <p class="text-gray-600">DevOps Engineer // DevOps Architect</p>
       </div>
     </div>
-
-    <p class="text-lg font-bold text-gray-800 text-center">Mario Vejlupek</p>
-    <p class="text-gray-600 mb-8 text-center">DevOps Engineer // DevOps Architect</p>
 
     <!-- Carousel with fade effect -->
     <div class="overflow-hidden relative fade-mask">
