Add custom font and update body styling in index.html
Signed-off-by: Mario Vejlupek <mario@vejlupek.cz>

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <title>DevOps Consulting - Power UP</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
+    @import url('https://fonts.googleapis.com/css2?family=Helvetica:wght@400;700&display=swap');
+
     @keyframes scroll {
       0% {
         transform: translateX(0);
@@ -21,10 +23,14 @@
       mask-image: linear-gradient(to right, transparent, black 10%, black 90%, transparent);
       -webkit-mask-image: linear-gradient(to right, transparent, black 10%, black 90%, transparent);
     }
+
+    body {
+      font-family: Helvetica, Arial, sans-serif;
+    }
   </style>
 </head>
 
-<body class="bg-gray-50 font-sans">
+<body class="bg-gray-50">
   <div class="max-w-6xl mx-auto py-12 px-6">
     <h1 class="text-3xl md:text-5xl font-semibold text-gray-800 mb-10 text-center italic">Power UP Your Infrastructure
     </h1>
