Update GitOps icon and replace AWS image with wordmark version in index.html
Signed-off-by: Mario Vejlupek <mario@vejlupek.cz>

--- a/index.html
+++ b/index.html
@@ -60,23 +60,19 @@
             alt="Terraform" class="h-10">
           <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/python/python-original.svg"
             alt="Python" class="h-10">
-          <img src="https://raw.githubusercontent.com/cncf/artwork/master/examples/gitops/gitops-icon-color.svg"
-            alt="GitOps" class="h-10">
+          <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/git/git-original.svg" alt="GitOps"
+            class="h-10">
           <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/gitlab/gitlab-original.svg"
             alt="Gitlab" class="h-10">
           <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/azure/azure-original.svg"
             alt="Azure" class="h-10">
           <img src="https://argo-cd.readthedocs.io/en/stable/assets/logo.png" alt="Argo CD" class="h-10">
           <img
-            src="https://raw.githubusercontent.com/devicons/devicon/master/icons/amazonwebservices/amazonwebservices-original.svg"
+            src="https://raw.githubusercontent.com/devicons/devicon/master/icons/amazonwebservices/amazonwebservices-original-wordmark.svg"
             alt="AWS" class="h-10">
           <img src="https://raw.githubusercontent.com/grafana/grafana/main/public/img/grafana_icon.svg" alt="Grafana"
             class="h-10">
 
-          <!-- Fancy DevOps visual -->
-          <img
-            src="https://cdn.dribbble.com/users/1355613/screenshots/15665028/media/1787f2a2ac2f9e50d3d3f048905499f3.gif"
-            alt="DevOps Loop" class="h-12 rounded shadow-md">
 
           <!-- Repeat icons for continuous scroll -->
           <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/kubernetes/kubernetes-plain.svg"
@@ -85,8 +81,8 @@
             alt="Terraform" class="h-10">
           <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/python/python-original.svg"
             alt="Python" class="h-10">
-          <img src="https://raw.githubusercontent.com/cncf/artwork/master/examples/gitops/gitops-icon-color.svg"
-            alt="GitOps" class="h-10">
+          <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/git/git-original.svg" alt="GitOps"
+            class="h-10">
           <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/gitlab/gitlab-original.svg"
             alt="Gitlab" class="h-10">
           <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/azure/azure-original.svg"
@@ -97,11 +93,6 @@
             alt="AWS" class="h-10">
           <img src="https://raw.githubusercontent.com/grafana/grafana/main/public/img/grafana_icon.svg" alt="Grafana"
             class="h-10">
-
-          <!-- Fancy DevOps visual duplicate -->
-          <img
-            src="https://cdn.dribbble.com/users/1355613/screenshots/15665028/media/1787f2a2ac2f9e50d3d3f048905499f3.gif"
-            alt="DevOps Loop" class="h-12 rounded shadow-md">
         </div>
       </div>
     </div>
