--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
       </div>
     </div>
 
-<section id="why" class="mb-16">
+<section id="why" class="mb-16 bg-white py-16 px-6 rounded-lg shadow">
   <h2 class="text-2xl font-bold text-gray-800 mb-4">Why Work With Me?</h2>
   <p class="mb-4">Because your infrastructure deserves a power-up.</p>
   <ul class="list-disc list-inside space-y-2 text-gray-700">
@@ -123,7 +123,7 @@
   </ul>
 </section>
 
-<section id="services" class="mb-16">
+<section id="services" class="mb-16 bg-gray-100 py-16 px-6 rounded-lg">
   <h2 class="text-2xl font-bold text-gray-800 mb-4">Services</h2>
   <ul class="space-y-4 text-gray-700">
     <li><strong>CI/CD Pipeline Design:</strong> Faster, safer, automated deployments.</li>
@@ -135,7 +135,7 @@
   </ul>
 </section>
 
-<section id="about" class="mb-16">
+<section id="about" class="mb-16 bg-white py-16 px-6 rounded-lg shadow">
   <h2 class="text-2xl font-bold text-gray-800 mb-4">About Me</h2>
   <p class="text-gray-700 mb-2">
     I’m Mario Vejlupek — DevOps consultant, former developer, meetup founder, and speaker. With 20+ years of hands-on experience, I’ve built systems that scale and teams that thrive. I’ve trained engineers in Kubernetes, mentored across time zones, and even taught kids to code with LEGO robots.
@@ -145,7 +145,7 @@
   </p>
 </section>
 
-<section id="contact" class="mb-16">
+<section id="contact" class="mb-16 bg-gray-100 py-16 px-6 rounded-lg">
   <h2 class="text-2xl font-bold text-gray-800 mb-4">Let’s Talk</h2>
   <p class="text-gray-700 mb-4">Want to find out how I can help you level up your infrastructure?</p>
   <a href="mailto:hello@devopsmario.com" class="inline-block bg-blue-600 text-white px-6 py-2 rounded hover:bg-blue-700 transition">Get in touch</a>
