--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <p class="text-gray-800 font-semibold">#DevOpsBeforeItWasCool</p>
       </div>
       <div class="md:w-1/2 flex flex-col items-end text-right">
-        <img src="mario.png" alt="Mario Vejlupek" class="rounded-lg max-h-96 mb-4">
+        <img src="mario.webp" alt="Mario Vejlupek" class="rounded-lg max-h-96 mb-4">
         <p class="text-lg font-bold text-gray-800">Mario Vejlupek</p>
         <p class="text-gray-600">DevOps Engineer // DevOps Architect</p>
       </div>
