--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 <section id="contact" class="mb-16 bg-gray-100 py-16 px-6 rounded-lg">
   <h2 class="text-2xl font-bold text-gray-800 mb-4">Let’s Talk</h2>
   <p class="text-gray-700 mb-4">Want to find out how I can help you level up your infrastructure?</p>
-  <a href="mailto:hello@devopsmario.com" class="inline-block bg-blue-600 text-white px-6 py-2 rounded hover:bg-blue-700 transition">Get in touch</a>
+  <a href="https://calendar.app.google/8g9KQJMnCWqejdXn6" class="inline-block bg-blue-600 text-white px-6 py-2 rounded hover:bg-blue-700 transition">Get in touch</a>
 </section>
   </div>
 </body>
