Update layout and styling in index.html for improved visual hierarchy and responsiveness
Signed-off-by: Mario Vejlupek <mario@vejlupek.cz>

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     </nav>
   </div>
 </header>
-  <div class="max-w-6xl mx-auto py-12 px-6">
+  <div class="max-w-6xl mx-auto pt-12 px-6 pb-6">
     <h1 class="text-3xl md:text-5xl font-semibold text-gray-800 mb-10 text-center italic">Power UP Your Infrastructure
     </h1>
 
@@ -67,15 +67,15 @@
             Years</span></p>
         <p class="text-gray-800 font-semibold">#DevOpsBeforeItWasCool</p>
       </div>
-      <div class="md:w-1/2 flex flex-col items-end text-right">
-        <img src="mario.webp" alt="Mario Vejlupek" class="rounded-lg h-[500px] object-cover mb-4 mask-image-fade">
+      <div class="md:w-1/2 flex flex-col items-end text-right overflow-hidden max-h-[750px]">
+        <img src="mario.webp" alt="Mario Vejlupek" class="rounded-lg h-[750px] object-cover mb-4 mask-image-fade">
         <p class="text-lg font-bold text-gray-800">Mario Vejlupek</p>
         <p class="text-gray-600">DevOps Engineer // DevOps Architect</p>
       </div>
     </div>
 
     <!-- Infinite CSS Carousel (optimized seamless scroll) -->
-    <div class="overflow-hidden w-full fade-mask relative">
+    <div class="overflow-hidden w-full fade-mask relative mb-16">
       <div class="scroll-track flex gap-12 w-max">
         <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/kubernetes/kubernetes-plain.svg" alt="Kubernetes" class="h-10 shrink-0">
         <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/terraform/terraform-original.svg" alt="Terraform" class="h-10 shrink-0">
@@ -107,7 +107,7 @@
       </div>
     </div>
 
-<section id="why" class="mb-16 bg-white py-16 px-6 rounded-lg shadow">
+<section id="why" class="mt-16 mb-16 bg-white py-16 px-6 rounded-lg shadow">
   <h2 class="text-2xl font-bold text-gray-800 mb-4">Why Work With Me?</h2>
   <p class="mb-4">Because your infrastructure deserves a power-up.</p>
   <ul class="list-disc list-inside space-y-2 text-gray-700">
