--- a/index.html
+++ b/index.html
@@ -60,22 +60,22 @@
     <h1 class="text-3xl md:text-5xl font-semibold text-gray-800 mb-10 text-center italic">Power UP Your Infrastructure
     </h1>
 
-    <div class="flex flex-col md:flex-row items-center justify-between gap-8 mb-12">
+    <div class="flex flex-col md:flex-row items-center justify-between gap-8 mb-12 snap-start">
       <div class="md:w-1/2 text-left">
         <h2 class="text-2xl md:text-3xl text-gray-700 mb-6">DevOps consulting for businesses ready to level up.</h2>
         <p class="text-gray-600 text-lg mb-2">Bridging Development and Operations for <span class="font-bold">Over 20
             Years</span></p>
         <p class="text-gray-800 font-semibold">#DevOpsBeforeItWasCool</p>
       </div>
-      <div class="md:w-1/2 flex flex-col items-end text-right overflow-hidden max-h-[750px]">
-        <img src="mario.webp" alt="Mario Vejlupek" class="rounded-lg h-[1000px] object-cover mb-4 mask-image-fade">
+      <div class="md:w-1/2 flex flex-col items-end text-right overflow-hidden max-h-[500px]">
+        <img src="mario.webp" alt="Mario Vejlupek" class="rounded-lg w-full max-h-[500px] object-cover mb-4 mask-image-fade">
         <p class="text-lg font-bold text-gray-800">Mario Vejlupek</p>
         <p class="text-gray-600">DevOps Engineer // DevOps Architect</p>
       </div>
     </div>
 
     <!-- Infinite CSS Carousel (optimized seamless scroll) -->
-    <div class="overflow-hidden w-full fade-mask relative mb-16">
+    <div class="overflow-hidden w-full fade-mask relative mb-16 snap-start">
       <div class="scroll-track flex gap-12 w-max">
         <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/kubernetes/kubernetes-plain.svg" alt="Kubernetes" class="h-10 shrink-0">
         <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/terraform/terraform-original.svg" alt="Terraform" class="h-10 shrink-0">
