--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         <p class="text-gray-800 font-semibold">#DevOpsBeforeItWasCool</p>
       </div>
       <div class="md:w-1/2 flex flex-col items-end text-right overflow-hidden max-h-[500px]">
-        <img src="mario.webp" alt="Mario Vejlupek" class="rounded-lg w-full max-h-[500px] object-cover mb-4 mask-image-fade">
+        <img src="mario.webp" alt="Mario Vejlupek" class="rounded-lg w-full max-h-[500px] object-top object-cover mb-4 mask-image-fade">
         <p class="text-lg font-bold text-gray-800">Mario Vejlupek</p>
         <p class="text-gray-600">DevOps Engineer // DevOps Architect</p>
       </div>
