--- a/index.html
+++ b/index.html
@@ -13,10 +13,12 @@
       0% {
         transform: translateX(0%);
       }
+
       100% {
         transform: translateX(-50%);
       }
     }
+
     .fade-mask {
       mask-image: linear-gradient(to right, transparent, black 10%, black 90%, transparent);
       -webkit-mask-image: linear-gradient(to right, transparent, black 10%, black 90%, transparent);
@@ -30,32 +32,57 @@
     body {
       font-family: Helvetica, Arial, sans-serif;
     }
+
     .scroll-track {
       animation: scroll-left 230s linear infinite;
     }
+
     .scroll-track::after {
       content: "";
       display: flex;
       gap: 3rem;
     }
-    .scroll-track > img {
+
+    .scroll-track>img {
       margin-right: 3rem;
     }
   </style>
 </head>
 
 <body class="bg-gray-50">
-<header class="bg-white shadow mb-10">
-  <div class="max-w-6xl mx-auto px-6 py-4 flex justify-between items-center">
-    <h1 class="text-xl font-bold text-gray-800">DevOpsMario</h1>
-    <nav class="space-x-6">
-      <a href="#why" class="text-gray-600 hover:text-gray-900">Why Work With Me?</a>
-      <a href="#services" class="text-gray-600 hover:text-gray-900">Services</a>
-      <a href="#about" class="text-gray-600 hover:text-gray-900">About Me</a>
-      <a href="#contact" class="text-gray-600 hover:text-gray-900">Let’s Talk</a>
-    </nav>
-  </div>
-</header>
+  <header class="bg-white shadow mb-10">
+    <div class="max-w-6xl mx-auto px-6 py-4">
+      <div class="flex justify-between items-center">
+        <h1 class="text-xl font-bold text-gray-800">DevOpsMario</h1>
+
+        <!-- Hamburger menu container -->
+        <div class="md:hidden relative w-6">
+          <input type="checkbox" id="menu-toggle" class="peer hidden">
+          <label for="menu-toggle" class="cursor-pointer text-gray-600 block">
+            <svg class="w-6 h-6" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
+              <path stroke-linecap="round" stroke-linejoin="round" d="M4 6h16M4 12h16M4 18h16" />
+            </svg>
+          </label>
+
+          <!-- Mobile menu -->
+          <div class="absolute right-0 mt-2 bg-white shadow-md rounded-md w-48 hidden peer-checked:flex flex-col z-50">
+            <a href="#why" class="px-4 py-2 text-gray-600 hover:bg-gray-100">Why Work With Me?</a>
+            <a href="#services" class="px-4 py-2 text-gray-600 hover:bg-gray-100">Services</a>
+            <a href="#about" class="px-4 py-2 text-gray-600 hover:bg-gray-100">About Me</a>
+            <a href="#contact" class="px-4 py-2 text-gray-600 hover:bg-gray-100">Let’s Talk</a>
+          </div>
+        </div>
+
+        <!-- Desktop nav -->
+        <nav class="hidden md:flex space-x-6">
+          <a href="#why" class="text-gray-600 hover:text-gray-900">Why Work With Me?</a>
+          <a href="#services" class="text-gray-600 hover:text-gray-900">Services</a>
+          <a href="#about" class="text-gray-600 hover:text-gray-900">About Me</a>
+          <a href="#contact" class="text-gray-600 hover:text-gray-900">Let’s Talk</a>
+        </nav>
+      </div>
+    </div>
+  </header>
   <div class="max-w-6xl mx-auto pt-12 px-6 pb-6">
     <h1 class="text-3xl md:text-5xl font-semibold text-gray-800 mb-10 text-center italic">Power UP Your Infrastructure
     </h1>
@@ -68,7 +95,8 @@
         <p class="text-gray-800 font-semibold">#DevOpsBeforeItWasCool</p>
       </div>
       <div class="md:w-1/2 flex flex-col items-end text-right overflow-hidden max-h-[500px]">
-        <img src="mario.webp" alt="Mario Vejlupek" class="rounded-lg w-full max-h-[500px] object-top object-cover mb-4 mask-image-fade">
+        <img src="mario.webp" alt="Mario Vejlupek"
+          class="rounded-lg w-full max-h-[500px] object-top object-cover mb-4 mask-image-fade">
         <p class="text-lg font-bold text-gray-800">Mario Vejlupek</p>
         <p class="text-gray-600">DevOps Engineer // DevOps Architect</p>
       </div>
@@ -77,75 +105,108 @@
     <!-- Infinite CSS Carousel (optimized seamless scroll) -->
     <div class="overflow-hidden w-full fade-mask relative mb-16 snap-start">
       <div class="scroll-track flex gap-12 w-max">
-        <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/kubernetes/kubernetes-plain.svg" alt="Kubernetes" class="h-10 shrink-0">
-        <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/terraform/terraform-original.svg" alt="Terraform" class="h-10 shrink-0">
-        <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/python/python-original.svg" alt="Python" class="h-10 shrink-0">
-        <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/git/git-original.svg" alt="Git" class="h-10 shrink-0">
-        <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/gitlab/gitlab-original.svg" alt="GitLab" class="h-10 shrink-0">
-        <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/azure/azure-original.svg" alt="Azure" class="h-10 shrink-0">
+        <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/kubernetes/kubernetes-plain.svg"
+          alt="Kubernetes" class="h-10 shrink-0">
+        <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/terraform/terraform-original.svg"
+          alt="Terraform" class="h-10 shrink-0">
+        <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/python/python-original.svg"
+          alt="Python" class="h-10 shrink-0">
+        <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/git/git-original.svg" alt="Git"
+          class="h-10 shrink-0">
+        <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/gitlab/gitlab-original.svg"
+          alt="GitLab" class="h-10 shrink-0">
+        <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/azure/azure-original.svg" alt="Azure"
+          class="h-10 shrink-0">
         <img src="https://argo-cd.readthedocs.io/en/stable/assets/logo.png" alt="Argo CD" class="h-10 shrink-0">
-        <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/amazonwebservices/amazonwebservices-original-wordmark.svg" alt="AWS" class="h-10 shrink-0">
-        <img src="https://raw.githubusercontent.com/grafana/grafana/main/public/img/grafana_icon.svg" alt="Grafana" class="h-10 shrink-0">
-        <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/kubernetes/kubernetes-plain.svg" alt="Kubernetes" class="h-10 shrink-0">
-        <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/terraform/terraform-original.svg" alt="Terraform" class="h-10 shrink-0">
-        <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/python/python-original.svg" alt="Python" class="h-10 shrink-0">
-        <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/git/git-original.svg" alt="Git" class="h-10 shrink-0">
-        <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/gitlab/gitlab-original.svg" alt="GitLab" class="h-10 shrink-0">
-        <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/azure/azure-original.svg" alt="Azure" class="h-10 shrink-0">
+        <img
+          src="https://raw.githubusercontent.com/devicons/devicon/master/icons/amazonwebservices/amazonwebservices-original-wordmark.svg"
+          alt="AWS" class="h-10 shrink-0">
+        <img src="https://raw.githubusercontent.com/grafana/grafana/main/public/img/grafana_icon.svg" alt="Grafana"
+          class="h-10 shrink-0">
+        <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/kubernetes/kubernetes-plain.svg"
+          alt="Kubernetes" class="h-10 shrink-0">
+        <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/terraform/terraform-original.svg"
+          alt="Terraform" class="h-10 shrink-0">
+        <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/python/python-original.svg"
+          alt="Python" class="h-10 shrink-0">
+        <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/git/git-original.svg" alt="Git"
+          class="h-10 shrink-0">
+        <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/gitlab/gitlab-original.svg"
+          alt="GitLab" class="h-10 shrink-0">
+        <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/azure/azure-original.svg" alt="Azure"
+          class="h-10 shrink-0">
         <img src="https://argo-cd.readthedocs.io/en/stable/assets/logo.png" alt="Argo CD" class="h-10 shrink-0">
-        <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/amazonwebservices/amazonwebservices-original-wordmark.svg" alt="AWS" class="h-10 shrink-0">
-        <img src="https://raw.githubusercontent.com/grafana/grafana/main/public/img/grafana_icon.svg" alt="Grafana" class="h-10 shrink-0">
-        <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/kubernetes/kubernetes-plain.svg" alt="Kubernetes" class="h-10 shrink-0">
-        <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/terraform/terraform-original.svg" alt="Terraform" class="h-10 shrink-0">
-        <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/python/python-original.svg" alt="Python" class="h-10 shrink-0">
-        <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/git/git-original.svg" alt="Git" class="h-10 shrink-0">
-        <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/gitlab/gitlab-original.svg" alt="GitLab" class="h-10 shrink-0">
-        <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/azure/azure-original.svg" alt="Azure" class="h-10 shrink-0">
+        <img
+          src="https://raw.githubusercontent.com/devicons/devicon/master/icons/amazonwebservices/amazonwebservices-original-wordmark.svg"
+          alt="AWS" class="h-10 shrink-0">
+        <img src="https://raw.githubusercontent.com/grafana/grafana/main/public/img/grafana_icon.svg" alt="Grafana"
+          class="h-10 shrink-0">
+        <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/kubernetes/kubernetes-plain.svg"
+          alt="Kubernetes" class="h-10 shrink-0">
+        <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/terraform/terraform-original.svg"
+          alt="Terraform" class="h-10 shrink-0">
+        <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/python/python-original.svg"
+          alt="Python" class="h-10 shrink-0">
+        <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/git/git-original.svg" alt="Git"
+          class="h-10 shrink-0">
+        <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/gitlab/gitlab-original.svg"
+          alt="GitLab" class="h-10 shrink-0">
+        <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/azure/azure-original.svg" alt="Azure"
+          class="h-10 shrink-0">
         <img src="https://argo-cd.readthedocs.io/en/stable/assets/logo.png" alt="Argo CD" class="h-10 shrink-0">
-        <img src="https://raw.githubusercontent.com/devicons/devicon/master/icons/amazonwebservices/amazonwebservices-original-wordmark.svg" alt="AWS" class="h-10 shrink-0">
-        <img src="https://raw.githubusercontent.com/grafana/grafana/main/public/img/grafana_icon.svg" alt="Grafana" class="h-10 shrink-0">
+        <img
+          src="https://raw.githubusercontent.com/devicons/devicon/master/icons/amazonwebservices/amazonwebservices-original-wordmark.svg"
+          alt="AWS" class="h-10 shrink-0">
+        <img src="https://raw.githubusercontent.com/grafana/grafana/main/public/img/grafana_icon.svg" alt="Grafana"
+          class="h-10 shrink-0">
       </div>
     </div>
 
-<section id="why" class="mt-16 mb-16 bg-white py-16 px-6 rounded-lg shadow">
-  <h2 class="text-2xl font-bold text-gray-800 mb-4">Why Work With Me?</h2>
-  <p class="mb-4">Because your infrastructure deserves a power-up.</p>
-  <ul class="list-disc list-inside space-y-2 text-gray-700">
-    <li><strong>Real-World Experience:</strong> From startup scrambles to enterprise complexity — I’ve handled it all.</li>
-    <li><strong>Fast, Lean, No Bloat:</strong> I focus on what actually moves the needle.</li>
-    <li><strong>Hands-On Partner:</strong> I get in the pipes, fix what’s broken, and leave your team stronger.</li>
-    <li><strong>Clear Communication:</strong> No buzzwords, just practical solutions.</li>
-    <li><strong>Right-Sized for SMBs:</strong> Responsive, reliable, and ready to jump in.</li>
-  </ul>
-</section>
+    <section id="why" class="mt-16 mb-16 bg-white py-16 px-6 rounded-lg shadow">
+      <h2 class="text-2xl font-bold text-gray-800 mb-4">Why Work With Me?</h2>
+      <p class="mb-4">Because your infrastructure deserves a power-up.</p>
+      <ul class="list-disc list-inside space-y-2 text-gray-700">
+        <li><strong>Real-World Experience:</strong> From startup scrambles to enterprise complexity — I’ve handled it
+          all.</li>
+        <li><strong>Fast, Lean, No Bloat:</strong> I focus on what actually moves the needle.</li>
+        <li><strong>Hands-On Partner:</strong> I get in the pipes, fix what’s broken, and leave your team stronger.</li>
+        <li><strong>Clear Communication:</strong> No buzzwords, just practical solutions.</li>
+        <li><strong>Right-Sized for SMBs:</strong> Responsive, reliable, and ready to jump in.</li>
+      </ul>
+    </section>
 
-<section id="services" class="mb-16 bg-gray-100 py-16 px-6 rounded-lg">
-  <h2 class="text-2xl font-bold text-gray-800 mb-4">Services</h2>
-  <ul class="space-y-4 text-gray-700">
-    <li><strong>CI/CD Pipeline Design:</strong> Faster, safer, automated deployments.</li>
-    <li><strong>Infrastructure as Code (IaC):</strong> Terraform, Kubernetes — codify everything.</li>
-    <li><strong>Cloud Architecture & Migration:</strong> Migrate and optimize across AWS, GCP, Azure.</li>
-    <li><strong>Monitoring & Observability:</strong> Know what’s going on before your users do.</li>
-    <li><strong>Security & Compliance:</strong> DevSecOps without slowing you down.</li>
-    <li><strong>DevOps Training & Mentoring:</strong> Empower your team with the skills and mindset to operate with confidence.</li>
-  </ul>
-</section>
+    <section id="services" class="mb-16 bg-gray-100 py-16 px-6 rounded-lg">
+      <h2 class="text-2xl font-bold text-gray-800 mb-4">Services</h2>
+      <ul class="space-y-4 text-gray-700">
+        <li><strong>CI/CD Pipeline Design:</strong> Faster, safer, automated deployments.</li>
+        <li><strong>Infrastructure as Code (IaC):</strong> Terraform, Kubernetes — codify everything.</li>
+        <li><strong>Cloud Architecture & Migration:</strong> Migrate and optimize across AWS, GCP, Azure.</li>
+        <li><strong>Monitoring & Observability:</strong> Know what’s going on before your users do.</li>
+        <li><strong>Security & Compliance:</strong> DevSecOps without slowing you down.</li>
+        <li><strong>DevOps Training & Mentoring:</strong> Empower your team with the skills and mindset to operate with
+          confidence.</li>
+      </ul>
+    </section>
 
-<section id="about" class="mb-16 bg-white py-16 px-6 rounded-lg shadow">
-  <h2 class="text-2xl font-bold text-gray-800 mb-4">About Me</h2>
-  <p class="text-gray-700 mb-2">
-    I’m Mario Vejlupek — DevOps consultant, former developer, meetup founder, and speaker. With 20+ years of hands-on experience, I’ve built systems that scale and teams that thrive. I’ve trained engineers in Kubernetes, mentored across time zones, and even taught kids to code with LEGO robots.
-  </p>
-  <p class="text-gray-700">
-    I believe in making complex systems understandable, usable, and empowering — whether you're a startup or an enterprise.
-  </p>
-</section>
+    <section id="about" class="mb-16 bg-white py-16 px-6 rounded-lg shadow">
+      <h2 class="text-2xl font-bold text-gray-800 mb-4">About Me</h2>
+      <p class="text-gray-700 mb-2">
+        I’m Mario Vejlupek — DevOps consultant, former developer, meetup founder, and speaker. With 20+ years of
+        hands-on experience, I’ve built systems that scale and teams that thrive. I’ve trained engineers in Kubernetes,
+        mentored across time zones, and even taught kids to code with LEGO robots.
+      </p>
+      <p class="text-gray-700">
+        I believe in making complex systems understandable, usable, and empowering — whether you're a startup or an
+        enterprise.
+      </p>
+    </section>
 
-<section id="contact" class="mb-16 bg-gray-100 py-16 px-6 rounded-lg">
-  <h2 class="text-2xl font-bold text-gray-800 mb-4">Let’s Talk</h2>
-  <p class="text-gray-700 mb-4">Want to find out how I can help you level up your infrastructure?</p>
-  <a href="https://calendar.app.google/8g9KQJMnCWqejdXn6" class="inline-block bg-blue-600 text-white px-6 py-2 rounded hover:bg-blue-700 transition">Get in touch</a>
-</section>
+    <section id="contact" class="mb-16 bg-gray-100 py-16 px-6 rounded-lg">
+      <h2 class="text-2xl font-bold text-gray-800 mb-4">Let’s Talk</h2>
+      <p class="text-gray-700 mb-4">Want to find out how I can help you level up your infrastructure?</p>
+      <a href="https://calendar.app.google/8g9KQJMnCWqejdXn6"
+        class="inline-block bg-blue-600 text-white px-6 py-2 rounded hover:bg-blue-700 transition">Get in touch</a>
+    </section>
   </div>
 </body>
 
